add qt5cpp to auto-generated clients. Addresses #154
