# auto-generated/swagger-yaml/swagger.yaml
@@ -147,6 +147,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /announcement/urgent:
     get:
       tags:
@@ -173,6 +174,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /apiKey:
     get:
       tags:
@@ -205,6 +207,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     post:
       tags:
       - APIKey
@@ -258,6 +261,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     delete:
       tags:
       - APIKey
@@ -273,7 +277,10 @@ paths:
         200:
           description: Request was successful
           schema:
-            $ref: '#/definitions/inline_response_200'
+            type: object
+            properties:
+              success:
+                type: boolean
         400:
           description: Parameter Error
           schema:
@@ -286,6 +293,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /apiKey/disable:
     post:
       tags:
@@ -315,6 +323,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /apiKey/enable:
     post:
       tags:
@@ -344,6 +353,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /chat:
     get:
       tags:
@@ -397,6 +407,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
     post:
       tags:
       - Chat
@@ -431,6 +442,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /chat/channels:
     get:
       tags:
@@ -458,6 +470,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /chat/connected:
     get:
       tags:
@@ -484,6 +497,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /execution:
     get:
       tags:
@@ -576,6 +590,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /execution/tradeHistory:
     get:
       tags:
@@ -660,6 +675,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /funding:
     get:
       tags:
@@ -745,6 +761,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument:
     get:
       tags:
@@ -834,6 +851,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument/active:
     get:
       tags:
@@ -861,6 +879,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument/indices:
     get:
       tags:
@@ -888,6 +907,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument/activeAndIndices:
     get:
       tags:
@@ -915,12 +935,13 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument/activeIntervals:
     get:
       tags:
       - Instrument
       summary: Return all active contract series and interval pairs.
-      description: This endpoint is useful for determining which pairs are live. It returns two arrays of   strings. The first is intervals, such as `["BVOL:daily", "BVOL:weekly", "XBU:daily", "XBU:monthly", ...]`. These identifiers are usable in any query's `symbol` param. The second array is the current resolution of these intervals. Results are mapped at the same index.
+      description: This endpoint is useful for determining which pairs are live. It returns two arrays of   strings. The first is intervals, such as `["XBT:perpetual", "XBT:monthly", "XBT:quarterly", "ETH:monthly", ...]`. These identifiers are usable in any query's `symbol` param. The second array is the current resolution of these intervals. Results are mapped at the same index.
       operationId: Instrument.getActiveIntervals
       parameters: []
       responses:
@@ -941,6 +962,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /instrument/compositeIndex:
     get:
       tags:
@@ -1036,6 +1058,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /insurance:
     get:
       tags:
@@ -1121,6 +1144,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /leaderboard:
     get:
       tags:
@@ -1154,6 +1178,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /leaderboard/name:
     get:
       tags:
@@ -1165,7 +1190,10 @@ paths:
         200:
           description: Request was successful
           schema:
-            $ref: '#/definitions/inline_response_200_1'
+            type: object
+            properties:
+              name:
+                type: string
         400:
           description: Parameter Error
           schema:
@@ -1178,6 +1206,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /liquidation:
     get:
       tags:
@@ -1263,6 +1292,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /notification:
     get:
       tags:
@@ -1290,6 +1320,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /order:
     get:
       tags:
@@ -1378,6 +1409,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     post:
       tags:
       - Order
@@ -1607,6 +1639,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     put:
       tags:
       - Order
@@ -1708,6 +1741,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     delete:
       tags:
       - Order
@@ -1751,6 +1785,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /order/bulk:
     post:
       tags:
@@ -1793,6 +1828,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
     put:
       tags:
       - Order
@@ -1825,6 +1861,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /order/closePosition:
     post:
       tags:
@@ -1861,6 +1898,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /order/all:
     delete:
       tags:
@@ -1904,6 +1942,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /order/cancelAllAfter:
     post:
       tags:
@@ -1930,7 +1969,6 @@ paths:
           description: Request was successful
           schema:
             type: object
-            properties: {}
         400:
           description: Parameter Error
           schema:
@@ -1943,6 +1981,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /orderBook/L2:
     get:
       tags:
@@ -1983,6 +2022,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /position:
     get:
       tags:
@@ -2028,6 +2068,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /position/isolate:
     post:
       tags:
@@ -2063,6 +2104,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /position/riskLimit:
     post:
       tags:
@@ -2098,6 +2140,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /position/transferMargin:
     post:
       tags:
@@ -2133,6 +2176,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /position/leverage:
     post:
       tags:
@@ -2168,6 +2212,7 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/Error'
+      deprecated: false
   /quote:
     get:
       tags:
@@ -2253,6 +2298,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /quote/bucketed:
     get:
       tags:
@@ -2350,6 +2396,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /schema:
     get:
       tags:
@@ -2367,7 +2414,6 @@ paths:
           description: Request was successful
           schema:
             type: object
-            properties: {}
         400:
           description: Parameter Error
           schema:
@@ -2381,6 +2427,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /schema/websocketHelp:
     get:
       tags:
@@ -2393,7 +2440,6 @@ paths:
           description: Request was successful
           schema:
             type: object
-            properties: {}
         400:
           description: Parameter Error
           schema:
@@ -2407,6 +2453,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /settlement:
     get:
       tags:
@@ -2492,6 +2539,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /stats:
     get:
       tags:
@@ -2519,6 +2567,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /stats/history:
     get:
       tags:
@@ -2546,6 +2595,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /stats/historyUSD:
     get:
       tags:
@@ -2573,6 +2623,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /trade:
     get:
       tags:
@@ -2662,6 +2713,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /trade/bucketed:
     get:
       tags:
@@ -2759,6 +2811,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
       security: []
+      deprecated: false
   /user/depositAddress:
     get:
       tags:
@@ -2776,6 +2829,7 @@ paths:
           description: Request was successful
           schema:
             type: string
+      deprecated: false
   /user/wallet:
     get:
       tags:
@@ -2793,6 +2847,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/Wallet'
+      deprecated: false
   /user/walletHistory:
     get:
       tags:
@@ -2812,6 +2867,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Transaction'
+      deprecated: false
   /user/walletSummary:
     get:
       tags:
@@ -2831,6 +2887,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Transaction'
+      deprecated: false
   /user/minWithdrawalFee:
     get:
       tags:
@@ -2849,8 +2906,8 @@ paths:
           description: Request was successful
           schema:
             type: object
-            properties: {}
       security: []
+      deprecated: false
   /user/requestWithdrawal:
     post:
       tags:
@@ -2892,6 +2949,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/Transaction'
+      deprecated: false
   /user/cancelWithdrawal:
     post:
       tags:
@@ -2909,6 +2967,7 @@ paths:
           schema:
             $ref: '#/definitions/Transaction'
       security: []
+      deprecated: false
   /user/confirmWithdrawal:
     post:
       tags:
@@ -2926,6 +2985,7 @@ paths:
           schema:
             $ref: '#/definitions/Transaction'
       security: []
+      deprecated: false
   /user/requestEnableTFA:
     post:
       tags:
@@ -2944,6 +3004,7 @@ paths:
           description: Request was successful
           schema:
             type: boolean
+      deprecated: false
   /user/confirmEnableTFA:
     post:
       tags:
@@ -2967,6 +3028,7 @@ paths:
           description: Request was successful
           schema:
             type: boolean
+      deprecated: false
   /user/disableTFA:
     post:
       tags:
@@ -2989,6 +3051,7 @@ paths:
           description: Request was successful
           schema:
             type: boolean
+      deprecated: false
   /user/confirmEmail:
     post:
       tags:
@@ -3006,6 +3069,7 @@ paths:
           schema:
             $ref: '#/definitions/AccessToken'
       security: []
+      deprecated: false
   /user/affiliateStatus:
     get:
       tags:
@@ -3018,6 +3082,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/Affiliate'
+      deprecated: false
   /user/checkReferralCode:
     get:
       tags:
@@ -3037,6 +3102,7 @@ paths:
             type: number
             format: double
       security: []
+      deprecated: false
   /user/logout:
     post:
       tags:
@@ -3047,7 +3113,10 @@ paths:
       responses:
         200:
           description: Request was successful
+          schema:
+            type: null
       security: []
+      deprecated: false
   /user/logoutAll:
     post:
       tags:
@@ -3061,6 +3130,7 @@ paths:
           schema:
             type: number
             format: double
+      deprecated: false
   /user/preferences:
     post:
       tags:
@@ -3084,6 +3154,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/User'
+      deprecated: false
   /user:
     get:
       tags:
@@ -3096,6 +3167,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/User'
+      deprecated: false
     put:
       tags:
       - User
@@ -3142,6 +3214,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/User'
+      deprecated: false
   /user/commission:
     get:
       tags:
@@ -3156,6 +3229,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/UserCommission'
+      deprecated: false
   /user/margin:
     get:
       tags:
@@ -3173,6 +3247,7 @@ paths:
           description: Request was successful
           schema:
             $ref: '#/definitions/Margin'
+      deprecated: false
 securityDefinitions:
   apiKey:
     type: apiKey
@@ -5158,10 +5233,17 @@ definitions:
       country:
         type: string
         maxLength: 3
+      geoipCountry:
+        type: string
+        maxLength: 2
+      geoipRegion:
+        type: string
+        maxLength: 2
       typ:
         type: string
     description: Account Operations
     example:
+      geoipRegion: geoipRegion
       country: country
       firstname: firstname
       preferences:
@@ -5206,6 +5288,7 @@ definitions:
       ownerId: 6.02745618307040320615897144307382404804229736328125
       affiliateID: affiliateID
       lastname: lastname
+      geoipCountry: geoipCountry
       lastUpdated: 2000-01-23T04:56:07.000+00:00
       phone: phone
       TFAEnabled: TFAEnabled
